*SVN*

* Added utf-8 as the default charset for all renders. You can change this default using ActionController::Base.default_charset=(encoding) [DHH]

* Added proper getters and setters for content type and charset [DHH]. Example of what we used to do:

    response.headers["Content-Type"] = "application/atom+xml; charset=utf-8"
  
  ...now:
  
    response.content_type = Mime::ATOM
    response.charset      = "utf-8"

* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]

  - XPATH support
  - Make Form.getElements() return elements in the correct order
  - fix broken Form.serialize return

* Declare file extensions exempt from layouts.  #6219 [brandon]
    Example: ActionController::Base.exempt_from_layout 'rpdf'

* Add chained replace/update support for assert_select_rjs [Rick Olson]

    Given RJS like...

      page['test1'].replace "<div id=\"1\">foo</div>"
      page['test2'].replace_html "<div id=\"2\">foo</div>"

    Test it with...

      assert_select_rjs :chained_replace
      assert_select_rjs :chained_replace, "test1"

      assert_select_rjs :chained_replace_html
      assert_select_rjs :chained_replace_html, "test2"

* Load helpers in alphabetical order for consistency. Resolve cyclic javascript_helper dependency.  #6132, #6178 [choonkeat@gmail.com]

* Skip params with empty names, such as the &=Save query string from <input type="submit"/>.  #2569 [manfred, raphinou@yahoo.com]

* Fix assert_tag so that :content => "foo" does not match substrings, but only exact strings. Use :content => /foo/ to match substrings. #2799 [Eric Hodel]

* Add descriptive messages to the exceptions thrown by cgi_methods. #6091, #6103 [Nicholas Seckar, Bob Silva]

* Update JavaScriptGenerator#show/hide/toggle/remove to new Prototype syntax for multiple ids,  #6068 [petermichaux@gmail.com]

* Update UrlWriter to support :only_path. [Nicholas Seckar, Dave Thomas]
